SERVER-37164 Prevent a sparse index being used on $gte and $lte queries with null (#25474)

GitOrigin-RevId: a0a2864ef6eb3ac83cefa732e379e180d4bcc5a2